--- a/requirements.txt
+++ b/requirements.txt
@@ -2,5 +2,6 @@ fastapi==0.104.1
 uvicorn==0.24.0
 pydantic==2.4.2
 transformers==4.35.2
-torch==2.1.1
+--find-links https://download.pytorch.org/whl/torch_stable.html
+torch==2.1.1+cpu
 peft==0.6.2 
