--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,6 @@
-fastapi==0.104.1
-uvicorn==0.24.0
-pydantic==2.4.2
-transformers==4.35.2
---find-links https://download.pytorch.org/whl/torch_stable.html
-torch==2.1.1+cpu
-peft==0.6.2 
+fastapi
+uvicorn
+pydantic
+transformers
+torch --index-url https://download.pytorch.org/whl/cpu
+peft 
